style.css
* {
  box-sizing: border-box;
}

/* ----------------------- TEXT and HEADINGS Related ---------------------------*/
body{
	margin: 0;
	background-color: #F9F9F9;
}

h1 {
	font-family: 'Poppins', sans-serif;
	font-size: 36px;
	font-weight: 700;
	color: #4A1C00;
	letter-spacing: -2px;
}
h2 {
	font-family: 'Single Day', sans-serif;
	font-size: 36px;
	color: #4A1C00;
}

h3 {
	font-family: 'Single Day', sans-serif;
	font-size: 28px;
	color: #4A1C00;
}

h4 {
	font-family: 'Poppins', sans-serif;
	font-size: 16px;
	font-weight: 700;
	color: #4A1C00;
}

p, label, li{
	font-family: 'Poppins', sans-serif;
	font-weight: 400;
	font-size: 14px;
	color: #4A1C00;
	letter-spacing: 1px;
}

a {
	text-decoration: none;
}

nav {
	font-family: 'Poppins', sans-serif;
	font-size: 16px;
	font-weight: 700;
  }
  
  nav a {
	color: #818181;
	position: relative; /* Required for pseudo-element positioning */
	transition: color 0.2s ease; /* Ease transition for the color change */

  }
  
  nav a::before {
	content: '';
	position: absolute;
	width: 0%;
	height: 2px; /* Adjust as needed */
	bottom: -0.2rem; /* Adjust based on text-underline-offset */
	left: 0;
	background-color: #FF5998;
	transition: width 0.2s ease; /* Ease transition for the underline */

  }
  
  .nav-links a:hover::before {
	width: 100%; /* Fully draw the underline on hover */
  }
  
  nav a:hover {
	color: #FF5998;
  }

.link-text {
	font-weight: bold;
	color: #ff69b4; /* Pink color */
	text-decoration: none; /* Remove underline */
	position: relative; /* Needed for positioning the arrow */
  }

  p > .link-text {
	padding-right: 20px; /* Adjust as needed */
	letter-spacing: 0px;
  }
  
  .link-text::after {
	content: ' →'; /* Arrow character */
	position: absolute;
	transform: translateX(-100%);

	left: 100%; /* Position the arrow just to the right of the link */
	transition: left 0.3s ease; /* Smooth transition for hover effect */
  }
  
  .link-text:hover::after {
	left: 120%; /* Move the arrow further right on hover */
	left: calc(100% + 5px);

  }

  img {
	width: 10rem; /* Set the desired width */
	height: auto; /* Maintain aspect ratio */

}

	.image-link {
		display: inline-block; /* Ensures the div takes up only as much width as necessary */
	}

	.image-link img {
		transition: transform 0.3s ease-in-out; /* Apply ease-in/out transition to transform property */
	}

	.image-link:hover img {
		transform: scale(1.2); /* Increase the scale of the image on hover */
	}


/* ----------------------- FORM Related ---------------------------*/
input[type=submit] {

	font-family: 'Poppins', sans-serif;
	font-size: 16px;
	font-weight: 700;
	text-decoration: none;
	background-color: #FCFCFC;
	border-color: #818181;
	border-radius: 1rem;
	border-style: solid;
	color: #818181;
	font-size: 16px;
	padding: 0.8rem 2rem;
	cursor: pointer;
	width: 100%;
	transition: color 0.3s ease, border-color 0.3s ease; /* Add transition for color and border-color */

}

input[type=submit]:hover {
	color:#FF5998;
	border-color: #FF5998;
  }


.text-input {
  position: relative;
  width: 100%;
}

.text-input label {
  position: absolute;
  top: 50%;
  left: 10px;
  transform: translateY(-50%);
  font-family: 'Poppins', sans-serif;
  font-weight: 400;
  font-size: 20px;
  color: #4A1C00;
  letter-spacing: 1px;
  pointer-events: none; 
  transition: top 0.3s, font-size 0.3s, color 0.3s;
}

.text-input input[type="text"] {
  width: 100%;
  padding: 15px;
  padding-left: 30px;
  background-color: #EDEDED;
  border: none;
  border-radius: 1.3rem;
  outline: none; 
  transition: background-color 0.3s;
}

.text-input input[type="text"]:hover {
	background-color: #EBEBEB; 
  }

.text-input input[type="text"]:focus + label,
.text-input input[type="text"]:valid + label {
  top: 0;
  font-size: 12px; /* Adjust as needed */
  color: #4A1C00; /* Adjust as needed */
}

input[type="radio"] {
    display: inline-block; 
    vertical-align: middle;
    appearance: none;
	margin-right: 0.8rem;
    -webkit-appearance: none;
    -moz-appearance: none;
    width: 18px;
    height: 18px;
    background-color: #D9D9D9;;
    border-radius: 50%;
    outline: none;
    cursor: pointer;
  }

  input[type="radio"]:checked {
    background-color: #FF5998;
  }


/* ----------------------- NAV BAR Related ---------------------------*/
 .navbar {
 	display: flex;
 	align-items: flex-end;
 	background-color: white;
 	box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2); /* Add drop shadow */
	z-index: 1; /* Ensure navbar stays on top of other elements */
 }

 .logo-container {
 	margin-left: 5rem;
 	margin-bottom: -2rem;
 	padding: 1rem;
 	background-color: white;
 	border-radius: 12rem;
 	border: 1px solid transparent; 
    box-shadow: 0 4px 0.5px -2px rgba(0, 0, 0, 0.2); 
 }

 .logo-container img {
 	width: 100px;
 	height: 110px;
	margin-left: 0.5rem;
 }

 .nav-links{
  flex-grow: 1;
  text-align: right;
  margin: 1rem 2rem;
  margin-bottom: 2.5rem;
 }

 .nav-links a {
 	margin: 1rem;
 }

  /* Media query for responsiveness */
  @media screen and (max-width: 768px) {
	.navbar {
	  flex-direction: column;
	  align-items: flex-start;
	}

	.nav-links {
		display: flex;
		gap: 20px;
		margin-right: auto; /* Align links to the left */
		margin-left: auto;
		margin-bottom: 0;
	}

	.logo-container {
	  position: relative;
	  left: auto;
	}

		.logo-container {
		 	margin-left: auto;
		 	margin-right: auto;
		  box-shadow: none;
	  }
  }

/* ----------------------- FORM Related ---------------------------*/

  .form-container {
    background-color: #fff;

  }
  .form{
    margin-bottom:1.5rem;
    border-radius: 5px;
    max-width: 600px;
  }

  .form-group {
    display: flex;
  }

  .half-width {
    width: calc(50% - 5px);
  }
  input.full-width {
    width: 100%;
  }

  .form-section {
    border-top: 1px solid #ccc;
    max-width:800px;
  }

  .input-fields {
    margin-right:1rem;
    margin-left:1rem;
  }
  
  .form-section:last-child {
    margin-bottom: 0; 
    border-bottom: 0px;
  }
/* ... */

